src/css/pages/_product.scss
/* ... */
.filter_levels {
    position: relative;

    img {
        height: 100%;
        width: 100%;
    }

    &_mob {
        max-width: 100%;
        max-height: 0;
        overflow: hidden;

        &.expand {
            max-height: 100%;
        }

        &.close {
            max-height: 0;
        }

        img {
            height: 100%;
            width: 100%;
        }

    }

    .filter-text-container {
        position: absolute;
        width: 100%;
        display: flex;
        justify-content: center;
        flex-direction: column;
        align-items: center;
        margin-top: 8rem;

        .subtitle {
            max-width: 893px;
        }
    }


}

.filter_si {
    background-image: url(/images/water_molecule.png);
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 630px;
    padding-bottom: 60px;


    .close_img_btn {
        width: 30px;
        height: 30px;
        border-radius: 999em;
    }

    @media (max-width: 768px) {
        background: linear-gradient(to bottom, #41547A, #273D68);
        height: fit-content;
    }

    .si_wrap {
        background-color: rgb(41, 53, 83, 0.3);
        border-radius: 25px;
        width: 700px;

        @media (max-width: 1024px) {
            width: fit-content;
        }
    }
}

.baby_intro {
    height: fit-content;

    @media (max-width: 768px) {
        flex-direction: column;
    }

    .baby_intro {
        &_img {
            flex: 1;
            background-image: url(/images/babywwater_2.png);
            background-repeat: no-repeat;
            background-size: cover;
            background-position: center;
            filter: brightness(0.8);

            @media (max-width: 768px) {
                min-height: 220px;
                width: 100%;
            }
        }

        &_info {
            width: 100%;
            display: flex;
            flex: 1;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            background-image: linear-gradient(#000, #071C41);
            background-repeat: no-repeat;
            background-size: cover;

            .intro_wrap {
                width: 100%;
            }
        }
    }
}

.gradient_container_iii {
    color: white;
    background-image: url(/images/water_molecule2.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    display: flex;
    gap: 40px;
    flex-direction: column;
    align-items: end;
    padding: 78px 130px;
    height: 1011px;

    @media (max-width: 768px) {
        display: none;
    }


    .background_i {
        display: flex;
        flex-direction: column;
        gap: 40px;

        .filter_list {
            ul li {
                letter-spacing: 0.15rem;
                font-weight: 400;
                list-style-type: disc;
            }

            ul>li.list_header {
                font-weight: 500;
                display: flex;
                list-style: none;
                margin-left: -60px;
            }
        }
    }
}

.productAdvantages {
    background: linear-gradient(to bottom, #30446E, #5D6D8E);

    .filter_list {
        background-color: rgba(245, 245, 245, 0.3);
        border: 1px solid #D9D9D9;
        border-radius: 4px;
        padding: 12px;

        ul li {
            letter-spacing: 0.15rem;
            font-weight: 400;
            list-style-type: disc;
        }

        ul>li.list_header {
            list-style: none;

            img {
                width: 35px;
            }
        }
    }

    .tag {
        display: flex;
        width: fit-content;
        align-items: center;
        border-radius: 25px;
        background-color: #6682aa;
        color: white;
        padding: 8px 16px;

        @media (max-width: 768px) {
            border-radius: 0;
            width: 100vw;
            margin-top: -32px;
            margin-left: -24px;
        }
    }

}

.background_B {
    background: linear-gradient(to bottom, #627291, #ADB6C6);

    .competitor {
        width: fit-content;

        .swiper-button-prev,
        .swiper-button-next {
            width: 30px !important;
            height: 30px !important;
            border: 1px solid #333;
            border-radius: 999em;
        }

        .tag {
            display: flex;
            width: fit-content;
            align-items: center;
            border-radius: 25px;
            background-color: #6682aa;
            color: white;
            padding: 8px 16px;

            @media (max-width: 768px) {
                border-radius: 0;
                width: 100vw;
                margin-left: -5vw;
            }
        }

        &_img {
            max-width: 100%;

            img {
                width: 100%;
            }
        }

        h2 {
            letter-spacing: 0.15rem;
        }
    }

    .purchase {
        width: fit-content;

        .tag {
            display: flex;
            width: fit-content;
            align-items: center;
            border-radius: 25px;
            background-color: #6682aa;
            color: white;
            padding: 8px 16px;
        }



    }
}

.purchase-btn {
    bottom: 0;
    width: 100%;
    z-index: 1;
}
/* ... */

